syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "io/aggregator/entity/transaction_merchant_key.proto";

package io.aggregator.entity;

option java_outer_classname = "MerchantEntity";

message MerchantDayActivated {
  MerchantKey merchant_key = 1;
  int64 epoch_day = 2;
}

message MerchantPaymentRequested {
  MerchantKey merchant_key = 1;
  string payment_id = 2;
  google.protobuf.Timestamp aggregate_request_timestamp = 3;
  repeated int64 active_days = 4;
}

message MerchantAggregationRequested {
  MerchantKey merchant_key = 1;
  string payment_id = 2;
  google.protobuf.Timestamp aggregate_request_timestamp = 3;
  repeated int64 active_days = 4;
}

message MerchantState {
  MerchantKey merchant_key = 1;
  int64 payment_id_sequence_number = 2;
  repeated int64 active_days = 3;
}
